--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+@font-face {
+  font-family: 'AppleII';
+  src: url('../public/fonts/AppleII.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 .App {
   text-align: center;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .App-logo {
