--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@font-face {
+/* @font-face {
   font-family: 'AppleII';
   src: url('../public/fonts/AppleII.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 .App {
   text-align: center;
